Fixed link transitions, github logo and other layout issues.

--- a/src/App.css
+++ b/src/App.css
@@ -26,10 +26,9 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 1rem;
+  margin: 0;
   max-width: var(--contentWidth);
   border-top: solid black 1px;
-  padding-top: 2rem;
 }
 
 article {
@@ -38,98 +37,84 @@ article {
   padding-bottom: 4rem;
   margin-bottom: 6rem;
   border-bottom: solid black 1px;
+  margin-top: 3rem;
 }
 
 section {
-  margin: 0;
+  margin-bottom: 2.5rem;
 }
 
 .description {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 footer {
   width: 25vw;
-  color: black;
   background-color: #cccccc;
-  font-family: 'IBM Plex Mono', monospace;
-  font-size: 1.1rem;
-  font-weight: 200;
   padding: 0.02rem 1rem 0.02rem 1rem;
-  margin-top: 4rem;
+  margin-top: 5rem;
 }
 
-footer a {
-  color: black;
-  text-decoration: underline;
-  font-size: 1.1rem;
-}
 
 h1 {
   font-size: 3rem;
   font-weight: 700;
-  margin-top: 3rem;
+  margin-top: 0;
 }
 
-h2, h2 a, h2 a:visited, h2 a:hover, h2 a:active {
-  color: black;
-  text-decoration: none;
+h2, .headerlink, .headerlink:hover, .headerlink:active, .headerlink:visited, .headerlink::after {
   font-size: 3rem;
   letter-spacing: -0.02rem;
   font-weight: 400;
   margin: inherit;
   padding: inherit;
-  cursor: pointer;
-}
-
-.headerlink {
-  color: black;
-  text-decoration: none;
-   background: none;
-}
-
-.headerlink:hover, .headerlink:active, .headerlink:visited {
+  cursor: pointer;  
   color: black;
   text-decoration: none;
   background: none;
+  box-shadow: none;
 }
 
+h3 {
+  color: black;
+  font-family: 'IBM Plex Mono', monospace;
+  font-size: 1.3rem;
+  font-weight: 700;
+}
 
 p {
- font-size: 2.5rem;
- width: 75%;
+  font-size: 2.5rem;
+  width: 75%;
+  margin-top: 1.7rem;
+  margin-bottom: 1.7rem;
 }
 
-a{
+a {
   color: blue;
+  text-decoration: none;
   font-weight: 700;
   font-size: 2.5rem;  
-	text-decoration: none;
-  border-bottom: none;
-  position: relative;
+  box-shadow: inset 0 -0.4rem 0 0 blue;
+  transition: box-shadow 0.1s;
 }
 
-a::after {
-  color: white;
-  content:'';
-  width:100%;
-  position: absolute;
-  left:0;
-  bottom:-1px;
-  height: 0.3rem;
-  background: blue;
-  transition: 0.2s;
-  z-index: -1;
-}
-
-a:hover::after {
-  height: 2.5rem;
+a:hover {
+  color: blue; 
+  box-shadow: inset 0 0 0 0 blue;  
+  transition: box-shadow 0s;
 }
 
 figure {
   padding: 0;
-  margin: 0 0 3rem 0;
+  margin: 0;
+}
+
+ul {
+  line-height: 3.5rem;
+  padding-left: 0;
+  list-style-type: none;
 }
 
 img {
@@ -151,17 +136,18 @@ img {
   width: 100%;
   display: inline-grid;
   grid-template-columns: auto 40rem 40rem 40rem auto;
-  grid-template-rows: 40rem 40rem;
+  grid-template-rows: 42rem 42rem;
   grid-row-gap: 2rem;
   grid-column-gap: 2rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .preview-img {
-  height: 100%;
+  height: 40rem;
   width: auto;
   padding: 0;
   margin: 0;
- 
 }
 
 .preview1 {
@@ -249,7 +235,6 @@ img {
   box-shadow: 0px 0px 6px 1px #ccc;
 }
 
-
 nav {
   display: flex;
   font-size: 2rem;
@@ -266,8 +251,21 @@ button {
   border-radius: 10px;
   padding: 1rem 1.5rem 1rem 1.5rem;
   cursor: pointer;
+  background: none;
 }
 
+.buttonlink, .buttonlink::after, .buttonlink:active, .buttonlink:hover, .buttonlink:hover::after, .buttonlink:visited {
+  font-size: 3rem;
+  letter-spacing: -0.02rem;
+  font-weight: 400;
+  margin: inherit;
+  padding: inherit;
+  cursor: pointer;  
+  color: black;
+  text-decoration: none;
+  background: none;
+  box-shadow: none;
+}
 
 .one {
    background-color: rgba(0, 0, 255, 1);
@@ -317,6 +315,10 @@ background-color: rgba(255, 0, 0, 0.7);
 background-color: rgba(255, 0, 255, 0.7);
 }
 
+.github {
+  box-shadow: inset 0 0 0 0 blue;
+}
+
 
 @media only screen and (max-width: 1300px) {
 
@@ -350,6 +352,8 @@ background-color: rgba(255, 0, 255, 0.7);
   grid-row: 3 / 4;
 }
 
+
+
 }
 
 
@@ -361,7 +365,6 @@ background-color: rgba(255, 0, 255, 0.7);
     width: 100%;
   }
 
-
   .preview-img {
   width: 100%;
   height: auto;
@@ -369,10 +372,6 @@ background-color: rgba(255, 0, 255, 0.7);
 
   p {
     width: 100%;
-  }
-
-  footer {
-    width: auto;
   }
 
   .preview-all {
@@ -439,6 +438,10 @@ background-color: rgba(255, 0, 255, 0.7);
     grid-row: 5 / 6;
     justify-self: center;
     align-self: start;
+  }
+
+  .portrait {
+    width: 100%;
   }
 
 }
